apps/cockpit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cockpit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cockpit
  template:
    metadata:
      labels:
        app: cockpit
    spec:
      containers:
        - name: cockpit
          image: quay.io/cockpit/ws
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          volumeMounts:
            - mountPath: /.ssh
              name: ssh-storage
              readOnly: true
            - mountPath: /etc/cockpit/cockpit.conf
              name: config
              readOnly: true
              subPath: cockpit.conf
      volumes:
        - name: ssh-keys
          secret:
            secretName: cockpit-ssh-key
        - name: ssh-storage
          emptyDir: {}  # Writable location for storing the SSH key needed for running chmod 600
        - name: config
          configMap:
            name: cockpit-conf
            items:
              - key: cockpit.conf
                path: cockpit.conf
